@@ -1162,3 +1162,5 @@
 	  for SPI-based MMC/SD cards and integrate into the NSH example.
 	* arch/arm/src/lm3s/lm3s_vectors.S - Correct vectors for GPIOC & D
 	  interrupts.
+	* arch/arm/src/lpc17xx/lp17_clockconfig.c - Power was not being
+	  provided to GPIO module.  This is a critical bugfix!
